* Various SCTP updates. (Michael)
* Set PPP direction in Ascend/Lucent module. (Guy)
* ISIS hello, LSP, CSNP, PSNP code rework. (Guy)
* Work around Windows' annoying decision to map 0.0.0.0 to the local host
    name in "gethostbyaddr()". (Guy)
* Capture file size test fixes in tethereal, command line argument
    parsing fixes. (Guy)
* VMS TCPIPtrace efficiency improvements. (Marc)

Overview of changes in Ethereal 0.8.20:

* packet-x25.c - Dissect more diagnostic codes. (Olivier)
* More mergecap fixes. (Scott Renfro)
* Fix a typo in packet-ssl.c (Scott)
* Check for localtime() return value (Scott)
* Epan fixes (Guy)
* Add SSL fields to the protocol tree, other SSL fixes. (Guy)
* Correct a pile of proto_tree_add_* calls in  packet-afs-macros.h,
    packet-h261.c, packet-iscsi.c packet-ldp.c, packet-mpeg1.c
    packet-mrdisc.c, packet-rtp.c, packet-sll.c, packet-yhoo.c,
    packet-x11.c, and packet-zebra.c. (Guy)
* Fix a string length check in packet-iscsi.c (Guy)
* README.developer updates (Guy)
* Change ethereal_gen.py to generate plugins instead of static dissectors.
    (Olivier)
* Fix typos and formatting in packet-x25.c and packet-ntp.c (Guy)
* Documentation makefile changes (Guy)
* Add "Suppress Unmarked" printing option (Ed)
* Add a "Mark Frame" packet list menu option (Ed)
* CORBA IDL updates (Frank)
* Fix X.25 packet length checking (Olivier)
* GIOP CosNaming support (Frank)
* Simplify the addition of plugins to the toplevel makefile (Ed)
* Many WSP enhancements, add WAP conversation dissection (Guy)
* Remove unused variables in gtk/proto_draw.c, packet-ip.c,
    packet-smb-browse.c, mergecap.c (Guy)
* Keep ethereal_gen.py from generating zero-length arrays, remove
    zero-length arrays from packet-cosnaming.c (Guy)
* Added CosEventComm dissector. (Frank)
* Fix "inline" call in packet-pgm.c (Guy)
* Update packet-ieee80211.c to handle mishandling of Novell 802.3 packets
    (Guy)
* Generalize handling of RFC 1700-style address family numbers. (Guy)